<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDetailMovieAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivDetailPoster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:contentDescription="@string/text_movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/tenet" />

            <TextView
                android:id="@+id/tvDetailTitle"
                style="@style/MovieTextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/tvDetailRating"
                app:layout_constraintStart_toEndOf="@id/ivDetailPoster"
                app:layout_constraintTop_toTopOf="@id/ivDetailPoster"
                tools:text="Tenet" />

            <TextView
                android:id="@+id/tvDetailRating"
                style="@style/MovieTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                app:layout_constraintBaseline_toBaselineOf="@id/tvDetailPerTen"
                app:layout_constraintEnd_toStartOf="@id/tvDetailPerTen"
                tools:text="7.8" />

            <TextView
                android:id="@+id/tvDetailPerTen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_per_ten"
                android:textColor="@color/grey"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvDetailTitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDetailWatchlist"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_round_grey_filled"
                android:paddingHorizontal="10dp"
                android:text="@string/text_detail_add_to_watchlist"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="@id/tvDetailTitle"
                app:layout_constraintTop_toBottomOf="@id/tvDetailTitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDetailTrailer"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_round_black_border"
                android:paddingHorizontal="10dp"
                android:text="@string/text_detail_watch_trailer"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/tvDetailTitle"
                app:layout_constraintTop_toBottomOf="@id/btDetailWatchlist" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/mdDetailTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:dividerColor="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/clDetailMovieAction" />

        <TextView
            android:id="@+id/tvDetailDescriptionTitle"
            style="@style/MovieTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_detail_short_description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mdDetailTop" />

        <TextView
            android:id="@+id/tvDetailDescriptionContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailDescriptionTitle"
            tools:text="Armed with only one word, Tenet, and fighting for the survival of the entire world, a Protagonist journeys through a twilight world of international espionage on a mission that will unfold in something beyond real time." />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/mdDetailBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:dividerColor="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/tvDetailDescriptionContent" />

        <TextView
            android:id="@+id/tvDetailInfoTitle"
            style="@style/MovieTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_detail_details"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mdDetailBottom" />

        <TextView
            android:id="@+id/tvDetailGenre"
            style="@style/MovieTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_detail_genre"
            app:layout_constraintEnd_toEndOf="@id/tvDetailReleaseDate"
            app:layout_constraintTop_toBottomOf="@id/tvDetailInfoTitle" />

        <TextView
            android:id="@+id/tvDetailReleaseDate"
            style="@style/MovieTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_detail_released_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailGenre" />

        <TextView
            android:id="@+id/tvDetailGenreContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tvDetailGenre"
            app:layout_constraintStart_toEndOf="@id/tvDetailGenre"
            tools:text="Action, Sci-Fi" />

        <TextView
            android:id="@+id/tvDetailReleaseDateContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvDetailReleaseDate"
            app:layout_constraintStart_toStartOf="@id/tvDetailGenreContent"
            tools:text="2020, 3 September" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
